--- a/images/controller/config/app/kustomization.yaml.tmpl
+++ b/images/controller/config/app/kustomization.yaml.tmpl
@@ -1,5 +1,7 @@
-namePrefix: {{.FullName}}-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 namespace: {{.Namespace}}
+namePrefix: {{.FullName}}-
 commonLabels:
   app.kubernetes.io/name: {{.App}}
   app.kubernetes.io/instance: {{.FullName}}
