KSA per user namespace, pass OAuth2 Client ID to pod-broker, extract user from cookie then auth header

--- a/images/controller/config/user/service-account.yaml.tmpl
+++ b/images/controller/config/user/service-account.yaml.tmpl
@@ -13,8 +13,22 @@
 # limitations under the License.
 
 apiVersion: v1
-kind: Namespace
+kind: ServiceAccount
 metadata:
   name: {{.Namespace}}
   annotations:
-    cnrm.cloud.google.com/project-id: {{.ProjectID}}
+    iam.gke.io/gcp-service-account: broker-user@{{.ProjectID}}.iam.gserviceaccount.com
+---
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicyMember
+metadata:
+  name: {{.Namespace}}-wi
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+spec:
+  resourceRef:
+    apiVersion: iam.cnrm.cloud.google.com/v1beta1
+    kind: IAMServiceAccount
+    external: projects/{{.ProjectID}}/serviceAccounts/broker-user@{{.ProjectID}}.iam.gserviceaccount.com
+  member: serviceAccount:{{.ProjectID}}.svc.id.goog[{{.Namespace}}/{{.Namespace}}]
+  role: roles/iam.workloadIdentityUser
