fix image puller job to add latest tag after pulling

--- a/setup/manifests/base/pod-broker/image-puller/config/image-pull-job.yaml.tmpl
+++ b/setup/manifests/base/pod-broker/image-puller/config/image-pull-job.yaml.tmpl
@@ -58,6 +58,10 @@ spec:
               echo "Pulling image: ${IMAGE}"
               gcloud -q auth configure-docker
               docker pull ${IMAGE}
+              echo "Tagging image ${IMAGE} with latest"
+              STRIPTAG=${IMAGE//:*/}
+              STRIPSHA=${STRIPTAG//@*/}
+              docker tag ${IMAGE} ${STRIPSHA}:latest
           env:
             - name: IMAGE
               value: "{{.Image}}"
