remove image pull from node-init daemonset

--- a/examples/jupyter-notebook/bundle-manifests/patch-user-pod.yaml.tmpl
+++ b/examples/jupyter-notebook/bundle-manifests/patch-user-pod.yaml.tmpl
@@ -39,8 +39,8 @@ spec:
         app.broker/user: "{{.User}}"
     spec:
       nodeSelector:
-        app.broker/initialized: "true"
         app.broker/tier: {{ .NodeTier.NodeLabel }}
+        cloud.google.com/gke-nodepool: "{{ .NodeTier.NodeLabel }}"
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
