updates to reservation controller, resource types now saved in annotation for deletion

--- a/images/controller/config/deployment/user/kustomization.yaml.tmpl
+++ b/images/controller/config/deployment/user/kustomization.yaml.tmpl
@@ -47,7 +47,7 @@ patchesJson6902:
     group: networking.istio.io
     version: v1alpha3
     kind: VirtualService
-    name: {{$.App}}
+    name: {{$.ServiceName}}
   path: {{ . }}
 {{- end }}
 {{- end }}
