--- a/setup/manifests/base/pod-broker/app-publisher/config/app-publish-job.yaml.tmpl
+++ b/setup/manifests/base/pod-broker/app-publisher/config/app-publish-job.yaml.tmpl
@@ -47,7 +47,7 @@ spec:
         - name: docker
           hostPath:
             path: /var/run/docker.sock
-            type: File
+            type: Socket
       initContainers:
         ###
         # Commit changes to docker image to new tag and push to registry.
