--- a/setup/manifests/base/pod-broker/image-puller/config/image-pull-job.yaml.tmpl
+++ b/setup/manifests/base/pod-broker/image-puller/config/image-pull-job.yaml.tmpl
@@ -44,7 +44,7 @@ spec:
         - name: docker
           hostPath:
             path: /var/run/docker.sock
-            type: File
+            type: Socket
       containers:
         ###
         # Pull image and then exit
