istio api to v1beta1

--- a/images/controller/config/deployment/user/kustomization.yaml.tmpl
+++ b/images/controller/config/deployment/user/kustomization.yaml.tmpl
@@ -45,7 +45,7 @@ patchesJson6902:
 {{- range .JSONPatchesVirtualService }}
 - target:
     group: networking.istio.io
-    version: v1alpha3
+    version: v1beta1
     kind: VirtualService
     name: {{$.ServiceName}}
   path: {{ . }}
